☕ Upgrade to Java 25
Starting from JDK 25, Flexible Constructors is a GA feature, therefore
the project no longer needs to enable preview features.